Refactor: Replace `Collections.unmodifiableList` with `List.copyOf` for immutable list creation in `HttpRequests`